# SmartScheduler

./: .gitignore  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml  scheduler.py
.github/workflows/: deploy.yml  python-app.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  scheduler.rst
po/ru/LC_MESSAGES/: Scheduler.po
scheduler/: __init__.py  __main__.py  algorithms.py  controllers.py  data_structures.py  models.py  tests.py  views.py
scheduler/ru/LC_MESSAGES/: Scheduler.po  scheduler.po
